force-app/main/default/objects/Issue__c/fields/Business_Impact__c.field-meta.xml
<CustomField>
    <fullName>Business_Impact__c</fullName>
    <inlineHelpText>How does this issue affect your productivity?</inlineHelpText>
    <label>Business Impact</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>