force-app/main/default/objects/Issue__c/fields/Business_Priority__c.field-meta.xml
<CustomField>
    <fullName>Business_Priority__c</fullName>
    <formula>IF(
 ISPICKVAL(Impact__c, &quot;High&quot;) &amp;&amp; ISPICKVAL(Urgency__c, &quot;High&quot;), 1,
IF(ISPICKVAL(Impact__c, &quot;High&quot;) &amp;&amp; ISPICKVAL(Urgency__c, &quot;Medium&quot;), 2,
IF(ISPICKVAL(Impact__c, &quot;Medium&quot;) &amp;&amp; ISPICKVAL(Urgency__c, &quot;High&quot;), 2,
IF(ISPICKVAL(Impact__c, &quot;High&quot;) &amp;&amp; ISPICKVAL(Urgency__c, &quot;Low&quot;), 3,
IF(ISPICKVAL(Impact__c, &quot;Medium&quot;) &amp;&amp; ISPICKVAL(Urgency__c, &quot;Medium&quot;), 3,
IF(ISPICKVAL(Impact__c, &quot;Low&quot;) &amp;&amp; ISPICKVAL(Urgency__c, &quot;High&quot;), 3,
IF(ISPICKVAL(Impact__c, &quot;Medium&quot;) &amp;&amp; ISPICKVAL(Urgency__c, &quot;Low&quot;), 4,
IF(ISPICKVAL(Impact__c, &quot;Low&quot;) &amp;&amp; ISPICKVAL(Urgency__c, &quot;Medium&quot;), 4,
IF(ISPICKVAL(Impact__c, &quot;Low&quot;) &amp;&amp; ISPICKVAL(Urgency__c, &quot;Low&quot;), 5,6

)))))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Business Priority</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>