force-app/main/default/objects/Issue__c/fields/Closed_Date__c.field-meta.xml
<CustomField>
    <fullName>Closed_Date__c</fullName>
    <description>When the Issue is Closed</description>
    <label>Closed Date</label>
    <type>DateTime</type>
</CustomField>