force-app/main/default/objects/Issue__c/fields/Defect_Type__c.field-meta.xml
<CustomField>
    <fullName>Defect_Type__c</fullName>
    <label>Defect Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Data</fullName>
            </value>
            <value>
                <fullName>Security</fullName>
            </value>
            <value>
                <fullName>Development/Config</fullName>
            </value>
            <value>
                <fullName>Training/How To&#39;s</fullName>
            </value>
            <value>
                <fullName>Platform Issue</fullName>
            </value>
            <value>
                <fullName>Service Request</fullName>
            </value>
            <value>
                <fullName>Test Script Issue</fullName>
            </value>
            <value>
                <fullName>Working as Expected</fullName>
            </value>
            <value>
                <fullName>Deployment</fullName>
            </value>
            <value>
                <fullName>Duplicate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>