force-app/main/default/objects/Issue__c/fields/Detailed_Resolution__c.field-meta.xml
<CustomField>
    <fullName>Detailed_Resolution__c</fullName>
    <label>Detailed Resolution</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>