force-app/main/default/objects/Issue__c/fields/Duplicate_Of__c.field-meta.xml
<CustomField>
    <fullName>Duplicate_Of__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Duplicate Of</label>
    <referenceTo>Issue__c</referenceTo>
    <relationshipLabel>Issues</relationshipLabel>
    <relationshipName>Issues</relationshipName>
    <type>Lookup</type>
</CustomField>