force-app/main/default/objects/Issue__c/fields/External_Ticket__c.field-meta.xml
<CustomField>
    <fullName>External_Ticket__c</fullName>
    <inlineHelpText>The ticket created in an external system (i.e. JIRA, VersionOne, etc.)</inlineHelpText>
    <label>External Ticket</label>
    <length>25</length>
    <type>Text</type>
</CustomField>