force-app/main/default/objects/Issue__c/fields/Issue_Description__c.field-meta.xml
<CustomField>
    <fullName>Issue_Description__c</fullName>
    <description>Details of the Issue to help find a solution</description>
    <inlineHelpText>Used to describe the issue. You can also copy a paste a screenshot into this field to help with resolution of the issue.</inlineHelpText>
    <label>Issue Description</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>