force-app/main/default/objects/Issue__c/fields/Issue_Resolution__c.field-meta.xml
<CustomField>
    <fullName>Issue_Resolution__c</fullName>
    <description>Where to enter the resolution of the issue. This should include details before closing an issue</description>
    <label>Issue Resolution</label>
    <type>TextArea</type>
</CustomField>