force-app/main/default/objects/Issue__c/fields/Issue_Type__c.field-meta.xml
<CustomField>
    <fullName>Issue_Type__c</fullName>
    <inlineHelpText>Defect - the feature doesn&#39;t work as expected
Enhancement - the feature works as expected, but you feel like it should be enhanced</inlineHelpText>
    <label>Issue Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Defect</fullName>
                <default>true</default>
                <label>Defect</label>
            </value>
            <value>
                <fullName>Enhancement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>