force-app/main/default/objects/Issue__c/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName>
    <inlineHelpText>P0
P1 
P2
P3
P4</inlineHelpText>
    <label>Priority</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>P0</fullName>
                <default>true</default>
                <label>P0</label>
            </value>
            <value>
                <fullName>P1</fullName>
            </value>
            <value>
                <fullName>P2</fullName>
            </value>
            <value>
                <fullName>P3</fullName>
            </value>
            <value>
                <fullName>P4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>