force-app/main/default/objects/Issue__c/fields/Record_URL__c.field-meta.xml
<CustomField>
    <fullName>Record_URL__c</fullName>
    <inlineHelpText>Copy and paste the URL of where you are having an issue into this field.</inlineHelpText>
    <label>Record URL</label>
    <type>Url</type>
</CustomField>