force-app/main/default/objects/Issue__c/fields/Reopen__c.field-meta.xml
<CustomField>
    <fullName>Reopen__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check box to Reopen an Issue</description>
    <label>Reopen</label>
    <type>Checkbox</type>
</CustomField>