force-app/main/default/objects/Issue__c/fields/Reopen_Reason__c.field-meta.xml
<CustomField>
    <fullName>Reopen_Reason__c</fullName>
    <description>Why is the Issue being Reopened?</description>
    <label>Reopen Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>