force-app/main/default/objects/Issue__c/fields/Reporter__c.field-meta.xml
<CustomField>
    <fullName>Reporter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The person who reports the isue. Could be the person who experienced it or created on behalf of someone else.</description>
    <label>Reporter</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Issues</relationshipName>
    <type>Lookup</type>
</CustomField>