force-app/main/default/objects/Issue__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>On Hold</fullName>
            </value>
            <value>
                <fullName>Reopen</fullName>
            </value>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>Need Clarification</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Retest</fullName>
            </value>
            <value>
                <fullName>Closed - Resolved</fullName>
            </value>
            <value>
                <fullName>Closed - Expected</fullName>
            </value>
            <value>
                <fullName>Closed - Duplicate</fullName>
            </value>
            <value>
                <fullName>Ready</fullName>
                <isActive>false</isActive>
                <label>Ready</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>