force-app/main/default/objects/Issue__c/fields/Technical_Description__c.field-meta.xml
<CustomField>
    <fullName>Technical_Description__c</fullName>
    <label>Technical Description</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>