force-app/main/default/objects/Issue__c/fields/Test_Step_Number__c.field-meta.xml
<CustomField>
    <fullName>Test_Step_Number__c</fullName>
    <inlineHelpText>Which test step from the UAT script did this fail on?</inlineHelpText>
    <label>Test Step Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>