force-app/main/default/objects/Issue__c/validationRules/Resolution_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Resolution_Required</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
OR(
CONTAINS(TEXT(Status__c),&quot;Closed&quot;),
CONTAINS(TEXT(Status__c),&quot;Retest&quot;)),
ISBLANK( Issue_Resolution__c ))</errorConditionFormula>
    <errorDisplayField>Issue_Resolution__c</errorDisplayField>
    <errorMessage>In order to close an Issue, you must enter a resolution</errorMessage>
</ValidationRule>