force-app/main/default/objects/Issue__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>External_Ticket__c</columns>
    <columns>Issue_Type__c</columns>
    <columns>Defect_Type__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>Issue_Description__c</columns>
    <columns>Urgency__c</columns>
    <columns>Business_Priority__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Issue_Type__c</field>
        <operation>notEqual</operation>
        <value>Enhancement</value>
    </filters>
    <label>All</label>
</ListView>