force-app/main/default/objects/Issue__c/listViews/Closed_Issue.listView-meta.xml
<ListView>
    <fullName>Closed_Issue</fullName>
    <columns>NAME</columns>
    <columns>Issue_Type__c</columns>
    <columns>Environment__c</columns>
    <columns>Status__c</columns>
    <columns>Defect_Type__c</columns>
    <columns>Business_Priority__c</columns>
    <columns>Issue_Description__c</columns>
    <columns>Reporter__c</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Closed - Resolved,Closed - Expected,Closed - Duplicate</value>
    </filters>
    <label>Closed Issue</label>
</ListView>