force-app/main/default/objects/Issue__c/listViews/Issue_InProgress.listView-meta.xml
<ListView>
    <fullName>Issue_InProgress</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Business_Priority__c</columns>
    <columns>Defect_Type__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>Reporter__c</columns>
    <columns>Issue_Type__c</columns>
    <columns>Status__c</columns>
    <columns>Issue_Description__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Reopen,New,Need Clarification,In Progress,Retest</value>
    </filters>
    <filters>
        <field>Issue_Type__c</field>
        <operation>equals</operation>
        <value>Defect</value>
    </filters>
    <label>Issue InProgress</label>
</ListView>