force-app/main/default/objects/Issue__c/listViews/My_Issues.listView-meta.xml
<ListView>
    <fullName>My_Issues</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Issue_Type__c</columns>
    <columns>Test_Step_Number__c</columns>
    <columns>Defect_Type__c</columns>
    <columns>Business_Priority__c</columns>
    <columns>Issue_Description__c</columns>
    <columns>Reporter__c</columns>
    <filterScope>Mine</filterScope>
    <label>My Issues</label>
</ListView>