force-app/main/default/objects/Issue__c/listViews/My_Open_Issues.listView-meta.xml
<ListView>
    <fullName>My_Open_Issues</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Issue_Type__c</columns>
    <columns>External_Ticket__c</columns>
    <columns>Test_Step_Number__c</columns>
    <columns>Defect_Type__c</columns>
    <columns>Business_Priority__c</columns>
    <columns>Issue_Description__c</columns>
    <columns>Reporter__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>On Hold,Need Clarification,Reopen,New,In Progress,Retest</value>
    </filters>
    <filters>
        <field>Issue_Type__c</field>
        <operation>equals</operation>
        <value>Defect</value>
    </filters>
    <label>My Open Defects</label>
</ListView>