force-app/main/default/objects/Issue__c/listViews/Need_Clarification.listView-meta.xml
<ListView>
    <fullName>Need_Clarification</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LAST_UPDATE</field>
        <operation>lessThan</operation>
        <value>2/12/2020 12:00 AM</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Need Clarification</value>
    </filters>
    <label>Need Clarification</label>
</ListView>