force-app/main/default/objects/Issue__c/listViews/New_Defects.listView-meta.xml
<ListView>
    <fullName>New_Defects</fullName>
    <columns>NAME</columns>
    <columns>Issue_Type__c</columns>
    <columns>External_Ticket__c</columns>
    <columns>Environment__c</columns>
    <columns>Status__c</columns>
    <columns>Defect_Type__c</columns>
    <columns>Business_Priority__c</columns>
    <columns>Issue_Description__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>New</value>
    </filters>
    <filters>
        <field>Issue_Type__c</field>
        <operation>equals</operation>
        <value>Defect</value>
    </filters>
    <label>New Defects</label>
</ListView>