force-app/main/default/objects/Issue__c/listViews/Retest.listView-meta.xml
<ListView>
    <fullName>Retest</fullName>
    <columns>NAME</columns>
    <columns>Issue_Resolution__c</columns>
    <columns>Defect_Type__c</columns>
    <columns>Business_Priority__c</columns>
    <columns>Reporter__c</columns>
    <columns>Issue_Description__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Retest</value>
    </filters>
    <label>Retest</label>
</ListView>